Add landmark elements and 'alt' text in <img> element

--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
+    <link href="styles.css" rel="stylesheet" />
     <title>Frontend Mentor | QR code component</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="card">
-      <img src="./images/image-qr-code.png" class="qr" />
+    <main class="card">
+      <img
+        class="qr"
+        src="./images/image-qr-code.png"
+        alt="QR image"
+        width="100%"
+      />
       <h1 class="title">Improve your front-end skills by building projects</h1>
       <p class="description">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
-    </div>
+    </main>
   </body>
 </html>
